bug: fix icon overlap

--- a/assets/css/secondary.css
+++ b/assets/css/secondary.css
@@ -1,3 +1,7 @@
 .align-left {
   text-align:left
 }
+
+.flag-space {
+  margin: 0 0 1em 2em;
+}
